# Hackrx

./: .dockerignore  .gitignore  Dockerfile  readme.md
.github/workflows/: fastapi-server-AutoDeployTrigger-9864ad3e-0b7d-44ef-8565-db0261a293dd.yml  fastapi-server-AutoDeployTrigger-e4ebcb2e-8906-4203-bfaf-1507312802ff.yml
app/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
app/routers/: hackrx.py
app/utils/: __init__.py  extractChunks.py  queryEmbed.py  vectorizeUpsert.py
