[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.3",
    "langchain>=0.3.27",
    "numpy>=2.3.2",
    "pdfplumber>=0.11.7",
    "pinecone>=7.3.0",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
